--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -14,17 +14,20 @@ edition = "2018"
 workspace = ".."
 
 [package.metadata.docs.rs]
-features = ["ssl"]
+features = ["ssl", "uri"]
 
 [lib]
 name = "actix_connect"
 path = "src/lib.rs"
 
 [features]
-default = []
+default = ["uri"]
 
 # openssl
 ssl = ["openssl", "tokio-openssl"]
+
+# support http::Uri as connect address
+uri = ["http"]
 
 [dependencies]
 actix-service = "0.3.4"
@@ -33,6 +36,7 @@ actix-utils = "0.3.4"
 derive_more = "0.14.0"
 either = "1.5.1"
 futures = "0.1.25"
+http = { version = "0.1.16", optional = true }
 log = "0.4"
 tokio-tcp = "0.1.3"
 tokio-current-thread = "0.1.5"
