--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,8 @@ script:
     fi
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "nightly-2019-03-02" ]]; then
-    RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install -f --git https://github.com/xd009642/tarpaulin.git --branch develop
-    cargo tarpaulin --features="ssl,tls,rust-tls" --out Xml
-    bash <(curl -s https://codecov.io/bash)
+    RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install --git https://github.com/xd009642/tarpaulin.git --branch develop
+    cargo tarpaulin --all --all-features --out Xml
     echo "Uploaded code coverage"
-    cargo tarpaulin --all --all-features --out Xml && bash <(curl -s https://codecov.io/bash)
+    bash <(curl -s https://codecov.io/bash)
     fi
