--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ fail = ["failure"]
 [dependencies]
 actix-service = "0.3.4"
 actix-codec = "0.1.1"
-actix-connect = { git = "https://github.com/actix/actix-net.git" }
+actix-connect = "0.1.0"
 actix-utils = "0.3.4"
 actix-server-config = "0.1.0"
 
@@ -85,7 +85,7 @@ failure = { version = "0.1.5", optional = true }
 [dev-dependencies]
 actix-rt = "0.2.0"
 actix-server = { version = "0.4.0", features=["ssl"] }
-actix-connector = { version = "0.3.0", features=["ssl"] }
+actix-connect = { version = "0.1.0", features=["ssl"] }
 actix-http-test = { path="test-server", features=["ssl"] }
 
 env_logger = "0.6"
