--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ mime = "0.3"
 net2 = "0.2.33"
 parking_lot = "0.7"
 regex = "1.0"
-serde = "1.0"
+serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
 serde_urlencoded = "^0.5.3"
 time = "0.1"
