move macros tests to codegen crate

--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -13,3 +13,8 @@ proc-macro = true
 [dependencies]
 quote = "0.6"
 syn = { version = "0.15", features = ["full", "parsing"] }
+
+[dev-dependencies]
+actix-web = { path = ".." }
+actix-http = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
+actix-http-test = { git = "https://github.com/actix/actix-http.git", features=["ssl"] }
