add async handler tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ actix-http-test = { git = "https://github.com/actix/actix-http.git", features=["
 rand = "0.6"
 env_logger = "0.6"
 serde_derive = "1.0"
+tokio-timer = "0.2.8"
 
 [profile.release]
 lto = true
