--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -36,6 +36,15 @@ ssl = ["openssl", "actix-connect/ssl"]
 # cookies integration
 cookies = ["cookie"]
 
+# brotli encoding, requires c compiler
+brotli = ["brotli2"]
+
+# miniz-sys backend for flate2 crate
+flate2-c = ["flate2/miniz-sys"]
+
+# rust backend for flate2 crate
+flate2-rust = ["flate2/rust_backend"]
+
 # failure integration. actix does not use failure anymore
 fail = ["failure"]
 
@@ -76,6 +85,10 @@ tokio-tcp = "0.1.3"
 tokio-timer = "0.2"
 tokio-current-thread = "0.1"
 trust-dns-resolver = { version="0.11.0-alpha.2", default-features = false }
+
+# compression
+brotli2 = { version="^0.3.2", optional = true }
+flate2 = { version="^1.0.2", optional = true, default-features = false }
 
 # optional deps
 cookie = { version="0.11", features=["percent-encode"], optional = true }
