--- a/actix-threadpool/Cargo.toml
+++ b/actix-threadpool/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "actix-rt"
-version = "0.2.2"
+name = "actix-threadpool"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix runtime"
-keywords = ["network", "framework", "async", "futures"]
+description = "Actix thread pool for sync code"
+keywords = ["actix", "network", "framework", "async", "futures"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
-documentation = "https://docs.rs/actix-rt/"
+documentation = "https://docs.rs/actix-threadpool/"
 categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
@@ -14,13 +14,14 @@ edition = "2018"
 workspace = ".."
 
 [lib]
-name = "actix_rt"
+name = "actix_threadpool"
 path = "src/lib.rs"
 
 [dependencies]
-actix-threadpool = { path="../actix-threadpool" }
+derive_more = "0.14"
 futures = "0.1.25"
-tokio-current-thread = "0.1"
-tokio-executor = "0.1.5"
-tokio-reactor = "0.1.7"
-tokio-timer = "0.2.8"
+parking_lot = "0.7"
+lazy_static = "1.2"
+log = "0.4"
+num_cpus = "1.10"
+threadpool = "1.7"
