--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
 readme = "README.md"
-keywords = ["http", "web", "framework", "async", "futures"]
+keywords = ["actix", "http", "web", "framework", "async"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-web.git"
 documentation = "https://docs.rs/actix-web/"
@@ -17,7 +17,6 @@ edition = "2018"
 
 [badges]
 travis-ci = { repository = "actix/actix-web", branch = "master" }
-appveyor = { repository = "fafhrd91/actix-web-hdy9d" }
 codecov = { repository = "actix/actix-web", branch = "master", service = "github" }
 
 [lib]
@@ -71,12 +70,12 @@ actix-service = "0.3.4"
 actix-utils = "0.3.4"
 actix-router = "0.1.0"
 actix-rt = "0.2.2"
-actix-web-codegen = { path="actix-web-codegen" }
-actix-http = { path = "actix-http", features=["fail"] }
+actix-web-codegen = "0.1.0-alpha.1"
+actix-http = { version = "0.1.0-alpha.1", features=["fail"] }
 actix-server = "0.4.1"
 actix-server-config = "0.1.0"
 actix-threadpool = "0.1.0"
-awc = { path = "awc", optional = true }
+awc = { version = "0.1.0-alpha.1", optional = true }
 
 bytes = "0.4"
 derive_more = "0.14"
@@ -104,14 +103,14 @@ openssl = { version="0.10", optional = true }
 # rustls = { version = "^0.15", optional = true }
 
 [dev-dependencies]
-actix-http = { path = "actix-http", features=["ssl", "brotli", "flate2-zlib"] }
-actix-http-test = { path = "test-server", features=["ssl"] }
+actix-http = { version = "0.1.0-alpha.1", features=["ssl", "brotli", "flate2-zlib"] }
+actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
 rand = "0.6"
 env_logger = "0.6"
 serde_derive = "1.0"
 tokio-timer = "0.2.8"
-brotli2 = { version="^0.3.2" }
-flate2 = { version="^1.0.2" }
+brotli2 = "^0.3.2"
+flate2 = "^1.0.2"
 
 [profile.release]
 lto = true
