--- a/actix-session/Cargo.toml
+++ b/actix-session/Cargo.toml
@@ -24,16 +24,16 @@ default = ["cookie-session"]
 cookie-session = ["cookie/secure"]
 
 [dependencies]
-actix-web = { path=".." }
+actix-web = "1.0.0-alpha.1"
 actix-service = "0.3.3"
 bytes = "0.4"
 cookie = { version="0.11", features=["percent-encode"], optional=true }
 derive_more = "0.14"
-futures = "0.1"
+futures = "0.1.25"
 hashbrown = "0.1.8"
 serde = "1.0"
 serde_json = "1.0"
 time = "0.1"
 
 [dev-dependencies]
-actix-rt = "0.2.1"
+actix-rt = "0.2.2"
