--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "actix-web-codegen"
-description = "Actix web codegen macros"
 version = "0.1.0-alpha.1"
+description = "Actix web proc macros"
+readme = "README.md"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 license = "MIT/Apache-2.0"
 edition = "2018"
@@ -16,5 +17,5 @@ syn = { version = "0.15", features = ["full", "parsing"] }
 
 [dev-dependencies]
 actix-web = { path = ".." }
-actix-http = { path = "../actix-http/", features=["ssl"] }
-actix-http-test = { path = "../test-server/", features=["ssl"] }
+actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
