--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -2,9 +2,9 @@
 name = "awc"
 version = "0.1.0-alpha.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix web client."
+description = "Actix http client."
 readme = "README.md"
-keywords = ["http", "web", "framework", "async", "futures"]
+keywords = ["actix", "http", "framework", "async", "web"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-web.git"
 documentation = "https://docs.rs/awc/"
@@ -41,11 +41,11 @@ flate2-rust = ["actix-http/flate2-rust"]
 [dependencies]
 actix-codec = "0.1.1"
 actix-service = "0.3.4"
-actix-http = { path = "../actix-http/" }
+actix-http = "0.1.0-alpha.1"
 base64 = "0.10.1"
 bytes = "0.4"
 derive_more = "0.14"
-futures = "0.1"
+futures = "0.1.25"
 log =" 0.4"
 percent-encoding = "1.0"
 rand = "0.6"
@@ -57,14 +57,14 @@ cookie = { version="0.11", features=["percent-encode"], optional = true }
 openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
-actix-rt = "0.2.1"
-actix-web = { path = "..", features=["ssl"] }
-actix-http = { path = "../actix-http/", features=["ssl"] }
-actix-http-test = { path = "../test-server/", features=["ssl"] }
+actix-rt = "0.2.2"
+actix-web = { version = "1.0.0-alpha.1", features=["ssl"] }
+actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
 actix-utils = "0.3.4"
 actix-server = { version = "0.4.0", features=["ssl"] }
-brotli2 = { version="^0.3.2" }
-flate2 = { version="^1.0.2" }
+brotli2 = { version="0.3.2" }
+flate2 = { version="1.0.2" }
 env_logger = "0.6"
 mime = "0.3"
 rand = "0.6"
