--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,11 +71,11 @@ actix-utils = "0.3.4"
 actix-router = "0.1.0"
 actix-rt = "0.2.2"
 actix-web-codegen = "0.1.0-alpha.1"
-actix-http = { version = "0.1.0-alpha.1", features=["fail"] }
+actix-http = { path = "actix-http", features=["fail"] }
 actix-server = "0.4.1"
 actix-server-config = "0.1.0"
 actix-threadpool = "0.1.0"
-awc = { version = "0.1.0-alpha.1", optional = true }
+awc = { path = "awc", optional = true }
 
 bytes = "0.4"
 derive_more = "0.14"
@@ -103,14 +103,14 @@ openssl = { version="0.10", optional = true }
 # rustls = { version = "^0.15", optional = true }
 
 [dev-dependencies]
-actix-http = { version = "0.1.0-alpha.1", features=["ssl", "brotli", "flate2-zlib"] }
-actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-http = { path = "actix-http", features=["ssl", "brotli", "flate2-zlib"] }
+actix-http-test = { path = "test-server", features=["ssl"] }
 rand = "0.6"
 env_logger = "0.6"
 serde_derive = "1.0"
 tokio-timer = "0.2.8"
-brotli2 = "^0.3.2"
-flate2 = "^1.0.2"
+brotli2 = "0.3.2"
+flate2 = "1.0.2"
 
 [profile.release]
 lto = true
