--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -16,6 +16,6 @@ quote = "0.6"
 syn = { version = "0.15", features = ["full", "parsing"] }
 
 [dev-dependencies]
-actix-web = { path = ".." }
+actix-web = { version = "1.0.0-alpha.1" }
 actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
 actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
