--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -41,7 +41,7 @@ flate2-rust = ["actix-http/flate2-rust"]
 [dependencies]
 actix-codec = "0.1.1"
 actix-service = "0.3.4"
-actix-http = "0.1.0-alpha.1"
+actix-http = { path = "../actix-http" }
 base64 = "0.10.1"
 bytes = "0.4"
 derive_more = "0.14"
@@ -58,9 +58,9 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-rt = "0.2.2"
-actix-web = { version = "1.0.0-alpha.1", features=["ssl"] }
-actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
-actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-web = { path = "..", features=["ssl"] }
+actix-http = { path = "../actix-http", features=["ssl"] }
+actix-http-test = { path = "../test-server", features=["ssl"] }
 actix-utils = "0.3.4"
 actix-server = { version = "0.4.0", features=["ssl"] }
 brotli2 = { version="0.3.2" }
