--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -52,6 +52,7 @@ rand = "0.6"
 serde = "1.0"
 serde_json = "1.0"
 serde_urlencoded = "0.5.3"
+tokio-timer = "0.2.8"
 
 cookie = { version="0.11", features=["percent-encode"], optional = true }
 openssl = { version="0.10", optional = true }
