--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -30,12 +30,11 @@ default = ["session"]
 session = ["cookie/secure"]
 
 # openssl
-ssl = ["openssl", "actix-http/ssl", "actix-server/ssl", "awc/ssl"]
+ssl = ["openssl", "actix-server/ssl", "awc/ssl"]
 
 [dependencies]
 actix-codec = "0.1.1"
 actix-rt = "0.2.1"
-actix-http = { path = "../actix-http" }
 actix-service = "0.3.4"
 actix-server = "0.4.0"
 actix-utils = "0.3.4"
@@ -61,4 +60,4 @@ tokio-timer = "0.2"
 openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
-actix-web = { path = ".." }
+actix-web = "1.0.0-alpha.1"
